# patent-science-linker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Queries/: Quantum_companies_query.rtf
config/topic_profiles/: quantum_broad.json  quantum_strict.json
src/pipeline/: company_query.py  duck.py  lens_client.py  main.py  normalizer.py  openalex.py  openalex_client.py  patentsview_client.py  patentsview_local.py  topic_filter.py  uspto_assignment_client.py
tests/: test_main_topic_gate.py  test_patentsview_local_paths.py  test_topic_filter.py
